--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Katarina (Kitkat), will you be my Valentine? 💖</h1>
+    <h1>(Kitkat), will you be my Valentine? 💖</h1>
     
     <div class="button-container">
       <button class="yes" id="yesButton">Yes</button>
