new commit again7

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   <div id="landingPage">
     <h1>Kitkat, Will You Be My Valentine?</h1>
     <!-- KitKat chocolate bar image (replace URL if needed) -->
-    <img class="kitkat" src="https://via.placeholder.com/400x300.png?text=KitKat+Chocolate+Bar" alt="KitKat Chocolate Bar">
+    <img class="kitkat" src="pngegg.png" alt="KitKat Chocolate Bar">
     <div class="button-container">
       <button id="yesBtn" class="btn">Yes</button>
       <button id="noBtn" class="btn dodging">No</button>
