new commit again8

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       position: fixed;
       bottom: 10px;
       left: 0;
-      width: 350px;
+      width: 200px;
       animation: catRun 6s linear infinite;
       z-index: 2;
     }
@@ -222,9 +222,9 @@
 
   <!-- Animated GIFs -->
   <!-- Running Cat -->
-  <img class="cat-run" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Running Cat">
+  <img class="cat-run" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbXY3YTBxazllMWJsZXBsOGRlbWFvYW0zZDhhMDhpZHcycndmaWxociZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tpVKvAabWt3G5csMkT/giphy.gif" alt="Running Cat">
   <!-- Bouncing Panda -->
-  <img class="panda" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbXY3YTBxazllMWJsZXBsOGRlbWFvYW0zZDhhMDhpZHcycndmaWxociZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tpVKvAabWt3G5csMkT/giphy.gif" alt="Bouncing Panda">
+  <img class="panda" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Bouncing Panda">
   <!-- Dancing Kitten -->
   <img class="kitten" src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" alt="Dancing Kitten">
 
