new commit again9

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       background-color: #E6E6FA; /* Light purple */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       position: relative;
+      padding-top: 10px;
     }
 
     /* ----- Floating Hearts Background ----- */
