new commit again10

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body { width: 100%; height: 100%; overflow-x: hidden; }
     body {
-      background-color: #E6E6FA; /* Light purple */
+      background-color: #a98ecc; /* Light purple */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       position: relative;
-      padding-top: 10px;
+      padding-top: 20px;
     }
 
     /* ----- Floating Hearts Background ----- */
@@ -340,7 +340,7 @@
       finalPage.style.display = 'block';
       finalPage.innerHTML = `
         <h1>alrighty then love u pookie</h1>
-        <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Two Cats Hugging" style="max-width:400px;">
+        <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Two Cats Hugging" style="max-width:600px;">
         
       `;
       startConfetti();
