new commit again11

--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@
       finalPage.style.display = 'block';
       finalPage.innerHTML = `
         <h1>alrighty then love u pookie</h1>
-        <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Two Cats Hugging" style="max-width:600px;">
+        <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" 
+     alt="Two Cats Hugging" 
+     style="width: 100%; max-width: 400px; display: block; margin: auto;">
         
       `;
       startConfetti();
