--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-color: #a98ecc; /* Light purple */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       position: relative;
-      padding-top: 30px;
+      padding-top: 100px;
     }
 
     /* ----- Floating Hearts Background ----- */
@@ -47,11 +47,11 @@
       position: relative;
       z-index: 1;
       text-align: center;
-      padding: 20px;
+      padding: 100px 20px 20px;;
     }
     #landingPage h1 {
       font-size: 2.5em;
-      margin-top: 20px;
+      margin-top: 100px;
     }
     /* Use a reliable placeholder image for the KitKat chocolate bar.
        Replace the URL with your preferred image if needed. */
@@ -69,7 +69,7 @@
       padding: 15px 25px;
       margin: 10px;
       font-size: 1.2em;
-      background: #2cb87d;
+      background: #672079;
       color: #fff;
       border: none;
       border-radius: 8px;
@@ -135,14 +135,14 @@
       display: none;
       position: relative;
       z-index: 1;
-      padding: 20px;
+      padding: 100px 20px 20px;;
     }
     .celebration-form {
       max-width: 500px;
       margin: 20px auto;
       background: rgba(255,255,255,0.9);
       border-radius: 10px;
-      padding: 20px;
+      padding: 100px 20px 20px;;
       text-align: left;
     }
     .celebration-form h2 {
@@ -177,13 +177,13 @@
     #finalPage {
       display: none;
       text-align: center;
-      padding: 20px;
+      padding: 100px 20px 20px;;
       position: relative;
       z-index: 1;
     }
     #finalPage h1 {
       margin-bottom: 20px;
-      margin-top: 30px;
+      padding-top: 100px;
       font-size: 2em;
     }
     .confetti {
@@ -352,7 +352,7 @@
         <h1>alrighty then love u pookie</h1>
         <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" 
      alt="Two Cats Hugging" 
-     style="width: 100%; max-width: 400px; display: block; margin: auto;">
+     style="width: 100%; width: 500px; display: block; margin: auto;">
         
       `;
       startConfetti();
