new commit again15

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       const finalPage = document.getElementById('finalPage');
       finalPage.style.display = 'block';
       finalPage.innerHTML = `
-        <h1>alrighty then love u pookie</h1>
+        <h1>Alrighty then love u pookie :))))</h1>
         <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" 
      alt="Two Cats Hugging" 
      style="width: 100%; width: 500px; display: block; margin: auto;">
