new commit again16

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body { width: 100%; height: 100%; overflow-x: hidden; }
     body {
-      background-color: #a98ecc; /* Light purple */
+      background-color: #b29bcf; /* Light purple */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       position: relative;
       padding-top: 30px;
@@ -177,13 +177,13 @@
     #finalPage {
       display: none;
       text-align: center;
-      padding: 30px 20px 20px;;
+      padding: 45px 20px 20px;;
       position: relative;
       z-index: 1;
     }
     #finalPage h1 {
       margin-bottom: 20px;
-      padding-top: 30px;
+      padding-top: 45px;
       font-size: 2em;
     }
     .confetti {
@@ -352,7 +352,7 @@
         <h1>Alrighty then love u pookie :))))</h1>
         <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" 
      alt="Two Cats Hugging" 
-     style="width: 100%; width: 500px; display: block; margin: auto;">
+     style="width: 100%; width: 600px; display: block; margin: auto;">
         
       `;
       startConfetti();
