new commit again17

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <option value="no">No</option>
               </select>
             </label>
-            <p style="font-weight: bold; color: #D2691E;">Flowers are non-negotiable!</p>
+            <p style="font-weight: bold; color: #D2691E;">Flowers, Kisses, and possibly Gifts are non-negotiable!</p>
             <label>
               Any other ideas:
               <input type="text" name="other" placeholder="Your idea here">
