new commit again21

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body { width: 100%; height: 100%; overflow-x: hidden; }
     body {
-      background-color: #b29bcf; /* Light purple */
+      background-color: #bdadd1; /* Light purple */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       position: relative;
       padding-top: 30px;
