new commit again25

--- a/index.html
+++ b/index.html
@@ -297,10 +297,11 @@
       celebrationPage.innerHTML = `
         <div class="celebration-form">
           <h2>Yay! Let's plan our day, Kat!</h2>
-            <form
-            action="https://formspree.io/f/xkgozvel"
-            method="POST"
-            >
+          <form
+          action="https://formspree.io/f/xkgozvel"
+          method="POST"
+          >
+            <input type="hidden" name="_replyto" value="nima.jafari.614@my.csun.edu">
             <label><input type="checkbox" name="activity" value="small dinner"> Small Dinner</label>
             <label><input type="checkbox" name="activity" value="froyo"> Froyo</label>
             <label><input type="checkbox" name="activity" value="ice cream"> Ice Cream</label>
